# ompt-printf

./: .gitignore  .gitlab-ci.yml  CITATION.cff  CMakeLists.txt  LICENSE  README.md
.github/actions/build-and-test-ompt-printf/: action.yml
.github/workflows/: build-multiplatform.yml
cmake/: DefineCompilerVendor.cmake  OMPTChecks.cmake
config/: uncrustify.cfg
src/: CMakeLists.txt  ompt-tool.cpp  tool-definitions.h.in  tool.cpp
test/: CMakeLists.txt  test_driver.sh  test_parallel.c  test_sections.c  test_task.c
